# jojo_grad

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  jomake  jorun
examples/: basic_ops.cpp  chain_rule.cpp
include/jojograd/: variable.hpp
src/: variable.cpp
tests/: test_variable.cpp
